src/util/heka_message_matcher_parser.leg
%{
/* -*- Mode: C; tab-width: 8; indent-tabs-mode: nil; c-basic-offset: 2 -*- */
/* vim: set ts=2 et sw=2 tw=80: */
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

/** @brief Hindsight message matcher parser @file */

#include <limits.h>
#include <stdbool.h>
#include <stdio.h>
#include <stdlib.h>
#include <time.h>

#include "heka_message_matcher_impl.h"
#include "luasandbox/util/heka_message.h"
#include "luasandbox/util/heka_message_matcher.h"

#ifndef _MSC_VER
#pragma GCC diagnostic ignored "-Wunused-parameter"
#pragma GCC diagnostic ignored "-Wunused-function"
#else
#pragma warning( disable : 4267 4244 )
#endif

typedef struct match_node_array {
  match_node  *a;
  int         pos;
  int         size;
} match_node_array;


typedef struct input_string {
  const char *s;
  size_t     pos;
  size_t     size;
} input_string;


typedef struct context {
  match_node_array  out;
  match_node_array  ops;
  match_node        mn;
  struct tm         tms;
  int               cond_cnt;
  input_string      is;
} context;


#define YY_PARSE(T) static T
#define YY_CTX_LOCAL 1
#define YY_CTX_MEMBERS \
   context ctx;

#define YY_INPUT(yy, buf, result, max_size)                                    \
{                                                                              \
  input_string *is = &yy->ctx.is;                                              \
  result = is->size - is->pos;                                                 \
  if (result > 0) {                                                            \
    if (max_size >= result) {                                                  \
      memcpy(buf, &is->s[is->pos], result);                                    \
      is->pos += result;                                                       \
    } else {                                                                   \
      memcpy(buf, &is->s[is->pos], max_size);                                  \
      is->pos += max_size;                                                     \
      result = max_size;                                                       \
    }                                                                          \
  }                                                                            \
}


static void init_match_node(match_node *mn)
{
  memset(mn, 0, sizeof(match_node));
}


static void move_match_node(match_node *dest, match_node *src)
{
  memcpy(dest, src, sizeof(match_node));
  init_match_node(src); // dest now owns the memory, wipe the pointers
}


static void realloc_mna(match_node_array *mna)
{
  size_t bytes = sizeof(match_node) * ++mna->size;
  match_node *tmp = realloc(mna->a, bytes);
  if (tmp) {
    mna->a = tmp;
    init_match_node(&mna->a[mna->size - 1]);
  } else {
    fprintf(stderr, "realloc failed\n");
    exit(1);
  }
}


static void push_output(context *ctx, match_node *mn)
{
  if (!ctx->out.a || ctx->out.pos == ctx->out.size) {
    realloc_mna(&ctx->out);
  }
  move_match_node(&ctx->out.a[ctx->out.pos++], mn);
}


static void push_op(context *ctx, match_operation op)
{
  if (!ctx->ops.a) {
    realloc_mna(&ctx->ops);
    ctx->ops.a[ctx->ops.pos++].op = op;
    return;
  }

  if (op == OP_OPEN || op > ctx->ops.a[ctx->ops.pos - 1].op) {
    if (ctx->ops.pos == ctx->ops.size) {
      realloc_mna(&ctx->ops);
    }
    ctx->ops.a[ctx->ops.pos++].op = op;
  } else {
    push_output(ctx, &ctx->ops.a[ctx->ops.pos - 1]);
    ctx->ops.a[ctx->ops.pos - 1].op = op;
  }
}


static void pop_to_paren(context *ctx)
{
  for (; ctx->ops.pos > 0; --ctx->ops.pos) {
    match_node *op = &ctx->ops.a[ctx->ops.pos - 1];
    if (op->op == OP_OPEN) break;
    push_output(ctx, op);
  }
}


static void pop_all_ops(context *ctx)
{
  for (; ctx->ops.pos > 0; --ctx->ops.pos) {
    match_node *op = &ctx->ops.a[ctx->ops.pos - 1];
    if (op->op == OP_OPEN) continue;
    push_output(ctx, op);
  }
}


static void update_date(context *ctx, int year, int mon, int day)
{
  ctx->tms.tm_isdst = -1;
  ctx->tms.tm_year  = year - 1900;
  ctx->tms.tm_mon   = mon - 1;
  ctx->tms.tm_mday  = day;
}


static void update_time(context *ctx, int hour, int minute, int sec)
{
  ctx->tms.tm_hour  = hour;
  ctx->tms.tm_min   = minute;
  ctx->tms.tm_sec   = sec;
}


static void update_offset(context *ctx, char sign, int hour, int minute)
{
  ctx->mn.value.d += (hour * 3600 + minute * 60) * (sign == '-' ? -1 : 1);
}


static void set_field(context *ctx, char *name)
{
  ctx->mn.id = LSB_PB_FIELDS;
  ctx->mn.variable_len = strlen(name);
  ctx->mn.variable = malloc(ctx->mn.variable_len + 1);
  if (!ctx->mn.variable) {
    fprintf(stderr, "malloc failed\n");
    exit(1);
  }
  memcpy(ctx->mn.variable, name, ctx->mn.variable_len + 1);
}


static void set_timestamp(context *ctx)
{
  ctx->mn.id = LSB_PB_TIMESTAMP;
  ctx->mn.value_type = TYPE_NUMERIC;
  if (ctx->tms.tm_isdst == -1) {
    ctx->mn.value.d += mktime(&ctx->tms);
    ctx->mn.value.d *= 1e9;
  }
  memset(&ctx->tms, 0, sizeof(struct tm));
}


static void set_numeric_value(context *ctx, char *s)
{
  ctx->mn.value_type = TYPE_NUMERIC;
  ctx->mn.value.d = strtod(s, NULL);
}


static void set_string_value(context *ctx, char *s)
{
  ctx->mn.value_type = TYPE_STRING;
  int i, j;
  for (i = 0, j = 0; s[i]; ++i, ++j) {
    if (s[i] == '\\' && (s[i + 1] == '"' || s[i + 1] == '\'')) {
      ++i;
    }
    s[j] = s[i];
  }
  s[j] = 0;

  ctx->mn.value_len = j;
  ctx->mn.value.s = malloc(j + 1);
  if (!ctx->mn.value.s) {
    fprintf(stderr, "malloc failed\n");
    exit(1);
  }
  memcpy(ctx->mn.value.s, s, j + 1);
}


static bool check_string_len(char *s)
{
  int i, j;
  for (i = 0, j = 0; s[i]; ++i, ++j) {
    if (s[i] == '\\' && (s[i + 1] == '"' || s[i + 1] == '\'')) {
      ++i;
    }
  }
  return (j > UCHAR_MAX) ? false : true;
}


static void set_boolean_value(context *ctx, bool b)
{
  ctx->mn.value_type = TYPE_BOOLEAN;
  ctx->mn.value.d = b;
}


static int cond_cnt(context *ctx)
{
  return (++ctx->cond_cnt * 2 + 1 > UCHAR_MAX) ? 0 : 1;
}

%}

match = sp ored eol {pop_all_ops(&yy->ctx)}
ored  = anded (or anded)* sp
anded = expr (and expr)* sp
expr  = test | open ored close
test  = ( string_test
        | numeric_test
        | field_test
        | ts_test
        | boolean_test
        ) {push_output(&yy->ctx, &yy->ctx.mn)} sp

op_eq  = "==" sp {yy->ctx.mn.op = OP_EQ}
op_ne  = "!=" sp {yy->ctx.mn.op = OP_NE}
op_seq = "=~" sp {yy->ctx.mn.op = OP_RE}
op_sne = "!~" sp {yy->ctx.mn.op = OP_NRE}
op_gte = ">=" sp {yy->ctx.mn.op = OP_GTE}
op_gt  = ">"  sp {yy->ctx.mn.op = OP_GT}
op_lte = "<=" sp {yy->ctx.mn.op = OP_LTE}
op_lt  = "<"  sp {yy->ctx.mn.op = OP_LT}

relational  = op_eq
            | op_ne
            | op_gte
            | op_gt
            | op_lte
            | op_lt

boolean_test  = true  {yy->ctx.mn.op = OP_TRUE}
              | false {yy->ctx.mn.op = OP_FALSE}
boolean       = true  {set_boolean_value(&yy->ctx, 1)}
              | false {set_boolean_value(&yy->ctx, 0)}

and         = "&&" &{cond_cnt(&yy->ctx)} {push_op(&yy->ctx, OP_AND)}  sp
or          = "||" &{cond_cnt(&yy->ctx)} {push_op(&yy->ctx, OP_OR)}   sp
open        = '('  {push_op(&yy->ctx, OP_OPEN)}                       sp
close       = ')'  {pop_to_paren(&yy->ctx)}                           sp

string_test = string_headers sp (relational sp string_value | string_match sp string_value)

string_headers  = "Type"        {yy->ctx.mn.id = LSB_PB_TYPE}         sp
                | "Logger"      {yy->ctx.mn.id = LSB_PB_LOGGER}       sp
                | "Hostname"    {yy->ctx.mn.id = LSB_PB_HOSTNAME}     sp
                | "EnvVersion"  {yy->ctx.mn.id = LSB_PB_ENV_VERSION}  sp
                | "Payload"     {yy->ctx.mn.id = LSB_PB_PAYLOAD}      sp
                | "Uuid"        {yy->ctx.mn.id = LSB_PB_UUID}         sp

string_value = ( '"' < ('\\\"' | (!'"' .))* > '"'
               | "'" < ("\\\'" | (!"'" .))* > "'"
               ) &{check_string_len(yytext)} {set_string_value(&yy->ctx, yytext)}

string_match = op_seq | op_sne

numeric_headers = "Severity"  {yy->ctx.mn.id = LSB_PB_SEVERITY} sp
                | "Pid"       {yy->ctx.mn.id = LSB_PB_PID}      sp

numeric_test  = numeric_headers sp relational sp numeric_value
numeric_value = < sign? number decimal? exponent? > {set_numeric_value(&yy->ctx, yytext)}
sign          = [-+]
number        = "0"
              | [1-9] [0-9]*
decimal       = "." [0-9]+
exponent      = [eE] sign? [0-9]+

field_test  = fields sp ((relational sp (string_value | numeric_value))
            | string_match sp string_value
            | (op_eq | op_ne) sp (boolean | nil))
fields      = "Fields[" < [^\]]* > "]" {set_field(&yy->ctx, yytext)} f:index? {yy->ctx.mn.fi = f} a:index? {yy->ctx.mn.ai = a}
index       = "[" < zero_to_255 > "]" {$$ = atoi(yytext)}
zero_to_255 = "2" [0-5] [0-5]
            | "1" [0-9] [0-9]
            | [1-9] [0-9]
            | [0-9]

ts_test   = ("Timestamp" sp relational sp (numeric_value | ts_quoted)) {set_timestamp(&yy->ctx)}
ts_quoted = '"' rfc3339 '"' | "'" rfc3339 "'"
fulldate  = (y:year "-" m:month "-" d:day) {update_date(&yy->ctx, y, m, d)}
year      = < [0-9] [0-9] [0-9] [0-9] > {$$ = atoi(yytext)}
month     = ( < "0" [1-9] >
            | < "1" [0-2] >
            ) {$$ = atoi(yytext)}
day       = (
              < [1-2] [0-9] >
            | < "0" [1-9] >
            | < "3" [0-1] >
            ) {$$ = atoi(yytext)}

rfc3339     = fulldate "T" fulltime
fulltime    = partialtime timeoffset
partialtime = h:hour ":" m:minute ":" s:second second_frac? {update_time(&yy->ctx, h, m, s)}
timeoffset  = "Z" {update_offset(&yy->ctx, '+', 0, 0)}
            | < sign > h:hour m:minute {update_offset(&yy->ctx, yytext[0], h, m)}
hour        = (
                < [0-1] [0-9] >
              | < "2" [0-3] >
              ) {$$ = atoi(yytext)}
minute      = < [0-5] [0-9] > {$$ = atoi(yytext)}
second      = (
                < [0-5] [0-9] >
              | < "60" >
              ) {$$ = atoi(yytext)}
second_frac = < decimal > {yy->ctx.mn.value.d += strtod(yytext, NULL)}

nil       = "NIL" {yy->ctx.mn.value_type = TYPE_NIL;} sp
true      = "TRUE" sp
false     = "FALSE" sp
sp        = [ \t]*
eol       = !.

%%


lsb_message_matcher* lsb_create_message_matcher(const char *exp)
{
  if (!exp) {
    return NULL;
  }

  lsb_message_matcher *mm = NULL;
  yycontext yy;
  memset(&yy, 0, sizeof(yy));
  yy.ctx.is.s = exp;
  yy.ctx.is.size = strlen(exp);
  int ret = yyparse(&yy);
  if (!ret) {
    free(yy.ctx.out.a);
    goto cleanup;
  }

  // reverse the order so the root node will be first
  match_node *s = yy.ctx.out.a;
  match_node *e = yy.ctx.out.a + yy.ctx.out.pos;
  for (--e; s < e; ++s, --e) {
    move_match_node(&yy.ctx.mn, s);
    move_match_node(s, e);
    move_match_node(e, &yy.ctx.mn);
  }

  mm = malloc(sizeof(lsb_message_matcher));
  if (!mm) {
    goto cleanup;
  }
  mm->nodes = yy.ctx.out.a;
  mm->nodes[0].size = yy.ctx.out.pos;

  // turn the postfix stack into an executable tree
  match_node **stack = calloc(sizeof(match_node *) * mm->nodes[0].size, 1);
  if (!stack) {
    free(mm);
    mm = NULL;
    goto cleanup;
  }

  int top = 0;
  for (int i = mm->nodes[0].size - 1; i >= 0; --i) {
    if (mm->nodes[i].op != OP_AND && mm->nodes[i].op != OP_OR) {
      stack[top++] = &mm->nodes[i];
    } else {
      mm->nodes[i].ai = stack[--top] - mm->nodes;
      mm->nodes[i].fi = stack[--top] - mm->nodes;
      stack[top++] = &mm->nodes[i];
    }
  }
  free(stack);

cleanup:
  free(yy.ctx.ops.a);
  yyrelease(&yy);
  return mm;
}
