src/util/heka_message_matcher_parser.c
/* A recursive-descent parser generated by peg 0.1.18 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 55
#line 1 "heka_message_matcher_parser.leg"

/* -*- Mode: C; tab-width: 8; indent-tabs-mode: nil; c-basic-offset: 2 -*- */
/* vim: set ts=2 et sw=2 tw=80: */
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

/** @brief Hindsight message matcher parser @file */

#include <limits.h>
#include <stdbool.h>
#include <stdio.h>
#include <stdlib.h>
#include <time.h>

#include "heka_message_matcher_impl.h"
#include "luasandbox/util/heka_message.h"
#include "luasandbox/util/heka_message_matcher.h"

#ifndef _MSC_VER
#pragma GCC diagnostic ignored "-Wunused-parameter"
#pragma GCC diagnostic ignored "-Wunused-function"
#else
#pragma warning( disable : 4267 4244 )
#endif

typedef struct match_node_tmp {
  uint8_t id;
  uint8_t op;
  uint8_t val_mod;
  uint8_t val_type;
  uint8_t val_len;
  uint8_t var_len;
  uint8_t fi; // left node index for logical op
  uint8_t ai; // right node index for logical op
  char          *var;

  union {
    char    *s;
    double  d;
  } val;
} match_node_tmp;


typedef struct match_node_array {
  match_node_tmp *a;
  int            pos;
  int            size;
} match_node_array;


typedef struct input_string {
  const char *s;
  size_t     pos;
  size_t     size;
} input_string;


typedef struct context {
  match_node_array  out;
  match_node_array  ops;
  match_node_tmp    mn;
  struct tm         tms;
  int               cond_cnt;
  input_string      is;
} context;


#define YY_PARSE(T) static T
#define YY_CTX_LOCAL 1
#define YY_CTX_MEMBERS \
   context ctx;

#define YY_INPUT(yy, buf, result, max_size)                                    \
{                                                                              \
  input_string *is = &yy->ctx.is;                                              \
  result = is->size - is->pos;                                                 \
  if (result > 0) {                                                            \
    if (max_size >= result) {                                                  \
      memcpy(buf, &is->s[is->pos], result);                                    \
      is->pos += result;                                                       \
    } else {                                                                   \
      memcpy(buf, &is->s[is->pos], max_size);                                  \
      is->pos += max_size;                                                     \
      result = max_size;                                                       \
    }                                                                          \
  }                                                                            \
}


static void init_match_node(match_node_tmp *mn)
{
  memset(mn, 0, sizeof(match_node_tmp));
}


static void move_match_node(match_node_tmp *dest, match_node_tmp *src)
{
  memcpy(dest, src, sizeof(match_node_tmp));
  init_match_node(src); // dest now owns the memory, wipe the pointers
}


static void realloc_mna(match_node_array *mna)
{
  size_t bytes = sizeof(match_node_tmp) * ++mna->size;
  match_node_tmp *tmp = realloc(mna->a, bytes);
  if (tmp) {
    mna->a = tmp;
    init_match_node(&mna->a[mna->size - 1]);
  } else {
    fprintf(stderr, "realloc failed\n");
    exit(1);
  }
}


static void push_output(context *ctx, match_node_tmp *mn)
{
  if (!ctx->out.a || ctx->out.pos == ctx->out.size) {
    realloc_mna(&ctx->out);
  }
  move_match_node(&ctx->out.a[ctx->out.pos++], mn);
}


static void push_op(context *ctx, match_operation op)
{
  if (!ctx->ops.a) {
    realloc_mna(&ctx->ops);
    ctx->ops.a[ctx->ops.pos++].op = op;
    return;
  }

  if (op == OP_OPEN || op > ctx->ops.a[ctx->ops.pos - 1].op) {
    if (ctx->ops.pos == ctx->ops.size) {
      realloc_mna(&ctx->ops);
    }
    ctx->ops.a[ctx->ops.pos++].op = op;
  } else {
    push_output(ctx, &ctx->ops.a[ctx->ops.pos - 1]);
    ctx->ops.a[ctx->ops.pos - 1].op = op;
  }
}


static void pop_to_paren(context *ctx)
{
  for (; ctx->ops.pos > 0; --ctx->ops.pos) {
    match_node_tmp *op = &ctx->ops.a[ctx->ops.pos - 1];
    if (op->op == OP_OPEN) break;
    push_output(ctx, op);
  }
}


static void pop_all_ops(context *ctx)
{
  for (; ctx->ops.pos > 0; --ctx->ops.pos) {
    match_node_tmp *op = &ctx->ops.a[ctx->ops.pos - 1];
    if (op->op == OP_OPEN) continue;
    push_output(ctx, op);
  }
}


static void update_date(context *ctx, int year, int mon, int day)
{
  ctx->tms.tm_isdst = -1;
  ctx->tms.tm_year  = year - 1900;
  ctx->tms.tm_mon   = mon - 1;
  ctx->tms.tm_mday  = day;
}


static void update_time(context *ctx, int hour, int minute, int sec)
{
  ctx->tms.tm_hour  = hour;
  ctx->tms.tm_min   = minute;
  ctx->tms.tm_sec   = sec;
}


static void update_offset(context *ctx, char sign, int hour, int minute)
{
  ctx->mn.val.d += (hour * 3600 + minute * 60) * (sign == '-' ? -1 : 1);
}


static void set_field(context *ctx, char *name)
{
  ctx->mn.id = LSB_PB_FIELDS;
  ctx->mn.var_len = strlen(name);
  ctx->mn.var = malloc(ctx->mn.var_len + 1);
  if (!ctx->mn.var) {
    fprintf(stderr, "malloc failed\n");
    exit(1);
  }
  memcpy(ctx->mn.var, name, ctx->mn.var_len + 1);
}


static void set_timestamp(context *ctx)
{
  ctx->mn.id = LSB_PB_TIMESTAMP;
  ctx->mn.val_type = TYPE_NUMERIC;
  if (ctx->tms.tm_isdst == -1) {
    ctx->mn.val.d += mktime(&ctx->tms);
    ctx->mn.val.d *= 1e9;
  }
  memset(&ctx->tms, 0, sizeof(struct tm));
}


static void set_numeric_value(context *ctx, char *s)
{
  ctx->mn.val_type = TYPE_NUMERIC;
  ctx->mn.val.d = strtod(s, NULL);
}


static void set_string_value(context *ctx, char *s)
{
  ctx->mn.val_type = TYPE_STRING;
  int i, j;
  for (i = 0, j = 0; s[i]; ++i, ++j) {
    if (s[i] == '\\' && (s[i + 1] == '"' || s[i + 1] == '\'')) {
      ++i;
    }
    s[j] = s[i];
  }
  s[j] = 0;

  ctx->mn.val_len = j;
  ctx->mn.val.s = malloc(j + 1);
  if (!ctx->mn.val.s) {
    fprintf(stderr, "malloc failed\n");
    exit(1);
  }
  memcpy(ctx->mn.val.s, s, j + 1);
}


static void set_match_mod(context *ctx)
{
  if (ctx->mn.val_mod == PATTERN_MOD_NONE
     && strpbrk(ctx->mn.val.s, "^$*+?.[%-") == NULL) { // literal
    ctx->mn.val_mod = PATTERN_MOD_ESC;
  }
}


static bool check_string_len(char *s)
{
  int i, j;
  for (i = 0, j = 0; s[i]; ++i, ++j) {
    if (s[i] == '\\' && (s[i + 1] == '"' || s[i + 1] == '\'')) {
      ++i;
    }
  }
  return (j > UCHAR_MAX) ? false : true;
}


static int cond_cnt(context *ctx)
{
  return (++ctx->cond_cnt * 2 + 1 > UCHAR_MAX) ? 0 : 1;
}


#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      int olen = yy->__valslen;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
      memset(yy->__vals + olen, 0, sizeof(YYSTYPE) * olen);
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_second_frac(yycontext *yy); /* 55 */
YY_RULE(int) yy_second(yycontext *yy); /* 54 */
YY_RULE(int) yy_minute(yycontext *yy); /* 53 */
YY_RULE(int) yy_hour(yycontext *yy); /* 52 */
YY_RULE(int) yy_timeoffset(yycontext *yy); /* 51 */
YY_RULE(int) yy_partialtime(yycontext *yy); /* 50 */
YY_RULE(int) yy_fulltime(yycontext *yy); /* 49 */
YY_RULE(int) yy_day(yycontext *yy); /* 48 */
YY_RULE(int) yy_month(yycontext *yy); /* 47 */
YY_RULE(int) yy_year(yycontext *yy); /* 46 */
YY_RULE(int) yy_fulldate(yycontext *yy); /* 45 */
YY_RULE(int) yy_rfc3339(yycontext *yy); /* 44 */
YY_RULE(int) yy_ts_quoted(yycontext *yy); /* 43 */
YY_RULE(int) yy_zero_to_255(yycontext *yy); /* 42 */
YY_RULE(int) yy_index(yycontext *yy); /* 41 */
YY_RULE(int) yy_nil(yycontext *yy); /* 40 */
YY_RULE(int) yy_fields(yycontext *yy); /* 39 */
YY_RULE(int) yy_exponent(yycontext *yy); /* 38 */
YY_RULE(int) yy_decimal(yycontext *yy); /* 37 */
YY_RULE(int) yy_number(yycontext *yy); /* 36 */
YY_RULE(int) yy_sign(yycontext *yy); /* 35 */
YY_RULE(int) yy_numeric_value(yycontext *yy); /* 34 */
YY_RULE(int) yy_numeric_headers(yycontext *yy); /* 33 */
YY_RULE(int) yy_string_match_mod(yycontext *yy); /* 32 */
YY_RULE(int) yy_string_match(yycontext *yy); /* 31 */
YY_RULE(int) yy_string_value(yycontext *yy); /* 30 */
YY_RULE(int) yy_string_headers(yycontext *yy); /* 29 */
YY_RULE(int) yy_boolean(yycontext *yy); /* 28 */
YY_RULE(int) yy_false(yycontext *yy); /* 27 */
YY_RULE(int) yy_true(yycontext *yy); /* 26 */
YY_RULE(int) yy_relational(yycontext *yy); /* 25 */
YY_RULE(int) yy_op_lt(yycontext *yy); /* 24 */
YY_RULE(int) yy_op_lte(yycontext *yy); /* 23 */
YY_RULE(int) yy_op_gt(yycontext *yy); /* 22 */
YY_RULE(int) yy_op_gte(yycontext *yy); /* 21 */
YY_RULE(int) yy_op_sne(yycontext *yy); /* 20 */
YY_RULE(int) yy_op_seq(yycontext *yy); /* 19 */
YY_RULE(int) yy_op_ne(yycontext *yy); /* 18 */
YY_RULE(int) yy_op_eq(yycontext *yy); /* 17 */
YY_RULE(int) yy_boolean_test(yycontext *yy); /* 16 */
YY_RULE(int) yy_ts_test(yycontext *yy); /* 15 */
YY_RULE(int) yy_field_test(yycontext *yy); /* 14 */
YY_RULE(int) yy_numeric_test(yycontext *yy); /* 13 */
YY_RULE(int) yy_string_test(yycontext *yy); /* 12 */
YY_RULE(int) yy_close(yycontext *yy); /* 11 */
YY_RULE(int) yy_open(yycontext *yy); /* 10 */
YY_RULE(int) yy_test(yycontext *yy); /* 9 */
YY_RULE(int) yy_and(yycontext *yy); /* 8 */
YY_RULE(int) yy_expr(yycontext *yy); /* 7 */
YY_RULE(int) yy_or(yycontext *yy); /* 6 */
YY_RULE(int) yy_anded(yycontext *yy); /* 5 */
YY_RULE(int) yy_eol(yycontext *yy); /* 4 */
YY_RULE(int) yy_ored(yycontext *yy); /* 3 */
YY_RULE(int) yy_sp(yycontext *yy); /* 2 */
YY_RULE(int) yy_match(yycontext *yy); /* 1 */
